# aura_sender_client

./: .gitignore  Cargo.toml  iface_info.sh
protos/: aura_sender.proto  aura_sender_types.proto  solana.proto
src/: client.rs  ffi.rs  lib.rs
